<resources>
    <string name="facebook_application_id">1469167689931009</string>
    <string name="fb_login_protocol_scheme">fb1469167689931009</string>



    <string name="app_name">testApplications</string>
    <string name="sign_in">  Welcome To The\nYellow Submarine</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="not_an_account_yet_register">Not an account yet? Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_an_image">Select an image</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_out">Sign Out</string>
    <string name="email">Email</string>
    <string name="sign_in_with_facebook">Sign In With Facebook </string>
    <string name="change_password">Don\'t worry! Just fill in your email and \nwe\'ll send you a link to reset your password.</string>
</resources>
